--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "mongoose-unique-validator": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
